--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </ul>
         </section>
 
-        <section>
+        <section class="calculator">
             <h2>calculator</h2>
             <p>someone can enter in the numbers they want, and press the big blue button and get the result.</p>
         </section>
@@ -121,7 +121,7 @@
 
      <footer>
          <h2>contact</h2>
-            <p> you're interested in chatting or want more information about what I've been working on. I'd love to hear from you</p>
+            <p> If you're interested in chatting or want more information about what I've been working on. I'd love to hear from you</p>
             <p>Phone: +1(111)555-1234</p>
             <p>Email: fxec@mysite.com</p>   
             <hr>          
