media query update for feedback

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <hr>  
             
         <div class="footer-display">  
-            <h2>Fahim Xec</h2>
+            <h2 class="footer-title">Fahim Xec</h2>
             <ul class="footer-nav">
                 <li class="top"> <a href="#top"></a>  back to top</li>
                 <li class="full"> <a href="#top"></a> Home</li>
